Fixed layout issues
May have introduced new layout issues

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -20,19 +20,20 @@ body {
   flex-direction: column;
   font: 1rem var(--font-mono);
   font-weight: 400;
-  margin: 10px 20px 0px 20px;
+  margin: 0px;
   color: var(--foreground-color);
   background-color: var(--background-color);
   white-space: pre-wrap;
-  min-height: calc(100vh - 10px);
-  min-width: 300px;
+  min-height: 100vh;
+  min-width: 366px;
   width: auto !important;
-  width: 300px;
+  width: 366px;
 }
 
 footer {
+  width: calc(100% - 80px);
   background-color: var(--color-black);
-  margin: 0px -20px;
+  margin: 0px;
   margin-top: auto;
   padding: 10px 40px 40px;
 }
@@ -101,6 +102,7 @@ table {
 }
 
 th, td {
+  width: 100px;
   padding: 2px 12px;
   border: 2px solid var(--color-white);
 }
